📝 Docker documentation related updates.

--- a/docker/env/example.env
+++ b/docker/env/example.env
@@ -20,4 +20,4 @@ MYSQL_PORT = 32769
 MYSQL_DATABASE = "mapos"
 MYSQL_USER = "mapos"
 MYSQL_PASSWORD = "S0m#P4S$"
-MYSQL_ROOT_PASSWORD = "S0m#$t40N6P4S$"
+MYSQL_ROOT_PASSWORD = "S0m#St40N6P4Ss"
